--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,7 @@
             name="description"
             content="Web site created using create-react-app"
     />
-    <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <link
-            rel="stylesheet"
-            href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&family=Roboto:wght@100;300;400;500;700&family=Roboto+Condensed:wght@300;400;500&display=swap"/>
 
     <!--icon sourced from https://www.freepik.com/-->
     <!--
